--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^0.22.0",
-    "faunadb": "^4.4.1"
+    "faunadb": "^4.4.1",
+    "lambda-rate-limiter":"^3.0.1"
   }
 }
